contact background and adress contrast fixed

--- a/css/contact.css
+++ b/css/contact.css
@@ -37,9 +37,10 @@ body {
     min-height: 100%;
     display: flex;
     flex-direction: column;
-    background-image: url('../images/syllabus-hero-bg.jpg');
+    background-color: #E5E7EB;
+    background-image: url("../images/syllabus-hero-bg.jpg");
     background-size: cover;
-    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 header {
@@ -132,8 +133,9 @@ h3 {
     margin: 0px 0 15px 0;
 }
 
+
 .email {
-    color: #1f2937;
+    color: #f9faf8;
     cursor: pointer;
 }
 
@@ -143,6 +145,7 @@ h3 {
     background-color: #3882f6;
     border-radius: 10px;
     padding: 50px;
+    color: #f9faf8;
 }
 
 .subContainer {
@@ -205,6 +208,7 @@ iframe {
     height: auto; 
     border: none;
     margin-top: 10px;
+    border-radius: 10px;;
     cursor: pointer;
     transition: transform .6s;
 }
@@ -349,6 +353,15 @@ footer div a:active {
         flex-direction: column;
         justify-content: center;
     }
+
+    body {
+        /* background-size: auto; */
+
+    }
+
+    .form {
+        margin: 10px 0;
+    } 
 
     .container {
         flex-direction: column;
